// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses Summary for empty list 1`] = `
<div>
  Viewing 
  0
  . Total cost: 
  $0.00
</div>
`;

exports[`should render Expenses Summary for empty list 2`] = `
<div>
  Viewing 
  3
  . Total cost: 
  $438.98
</div>
`;
